--- a/frontend-leis/src/app/protected/modules/equipment/pages/manage-users/manage-users.component.html
+++ b/frontend-leis/src/app/protected/modules/equipment/pages/manage-users/manage-users.component.html
@@ -1,11 +1,12 @@
-<div class="equipment__admin2">
-  <div class="equipment__header">
-    <div class="photo">
+<div class="equipment__admin2" >
+  <mat-card style="border-radius: 1rem; width: 80%; margin-left: 150px; background-color: rgb(8, 22, 54); margin-top: 70px;">
+  <div class="equipment__header" >
+    <div class="photo col-5">
       <img
         src="https://images.unsplash.com/photo-1601934025804-c631e2777f26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
         alt="">
     </div>
-    <div class="equipment__info">
+    <div class="equipment__info col-5">
       <div class="title">
         <label for="" class="cod">Codigo:</label>
         <input type="text" class="form-control" placeholder="#Codigo equipo">
@@ -28,11 +29,13 @@
       </div>
     </div>
   </div>
-  <div class="section">
-    <p-fileUpload name="myfile[]" url="./upload.php"></p-fileUpload>
+</mat-card>
 
+  <div class="section">
+    <p-fileUpload name="myfile[]" url="./upload.php" style="margin-left: 50px;"></p-fileUpload>
   </div>
   <div class="equipment__header">
+
   <div >
     <button pButton pRipple type="button" label="Success" class="p-button-success" style="width: 200px;"></button>
   </div>
