--- a/frontend-leis/src/app/protected/modules/equipment/pages/technical-data-sheets/technical-data-sheets.component.html
+++ b/frontend-leis/src/app/protected/modules/equipment/pages/technical-data-sheets/technical-data-sheets.component.html
@@ -2,15 +2,17 @@
 
 </div>
 
-<div class="equipmentadmin2">
-  <div class="col-4">
-  <mat-card style="margin-left: 600px; margin-top: 60px; width: 50%; text-align: center;"> Data de Recursos Humanos</mat-card>
+<div class=" colequipmentadmin2; ">
+<div class=""  style="background-color: rgb(8, 22, 54); padding: 10px;">
+  <mat-card style="margin-left: 575px; margin-top: 60px; width: 20%; text-align: center; border-radius: 1rem;"> Área para titulo del documento </mat-card>
 </div>
 
-<div class="margin-left:30px; width:80%">
-  <mat-card >
-    <mat-card style="margin: 2rem auto; width: 70%;">
-      <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html" style="width: 100%; height: 700px" frameborder="0"></iframe>
+
+<div class="margin-left:auto; width:90%">
+  <mat-card style="background-color: #dddddd;">
+    <mat-card style="margin: 2rem auto; width: 80%; background-color: rgb(8, 22, 54); border-radius: 1rem;">
+      <i class="pi pi-times" style="font-size: 1.2rem; background-color: red; border-radius: 2rem; float: right; margin-bottom: 5px;"></i>
+      <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html" style="width: 100%; height: 700px; border-radius: 1.5rem;" frameborder="0"></iframe>
     </mat-card>
   </mat-card>
 </div>
