--- a/frontend-leis/src/app/protected/modules/users/pages/assign-roles/assign-roles.component.html
+++ b/frontend-leis/src/app/protected/modules/users/pages/assign-roles/assign-roles.component.html
@@ -1,27 +1,29 @@
-<div class="equipment__admin2">
-  <div class="equipment__header">
+<div class="assign_admin">
+  <div class="assign_header">
+
     <div class="photo img">
+      <h1 class="asig">Asignación de Rol</h1>
       <img src="/assets/rol.png" alt="">
     </div>
-    <div class="equipment__info">
+    <div class="assign_info">
       <div class="title">
         <label for="" class="cod">Documento:</label>
-        <input type="text" class="form-control" placeholder="Documento">
+        <input type="text" class="form-control" placeholder=" ">
       </div>
       <div class="title">
         <label for="" class="cod">Nombres:</label>
-        <input type="text" class="form-control" placeholder="Nombres">
+        <input type="text" class="form-control" placeholder=" ">
       </div>
       <div class="title">
         <label for="" class="cod">Apellidos:</label>
-        <input type="text" class="form-control" placeholder="Apellidos">
+        <input type="text" class="form-control" placeholder=" ">
       </div>
       <div class="title">
         <label for="" class="cod">E-mail:</label>
-        <input type="text" class="form-control" placeholder="e-mail">
+        <input type="text" class="form-control" placeholder=" ">
       </div>
       <div class="title">
-        <label for="" class="roles">Rol:</label>
+        <label for="" class="cod">Rol:</label>
         <p-treeSelect [(ngModel)]="selectedNode" [options]="nodes" placeholder="Seleccionar Rol"></p-treeSelect>
       </div>
     </div>
