--- a/frontend-leis/src/app/protected/modules/users/pages/list/list.component.html
+++ b/frontend-leis/src/app/protected/modules/users/pages/list/list.component.html
@@ -63,12 +63,15 @@
                   <span [class]="'customer-badge status-' + option.value">{{option.label}}</span>
                 </ng-template>
               </p-dropdown>
-            </ng-template> -->
+            </ng-template>77 -->
           </p-columnFilter>
         </div>
       </th>
-
-
+      <th pSortableColumn="icon">
+        <div class="flex justify-content-between align-items-center">
+          Editar/Eliminar
+        </div>
+      </th>
     </tr>
   </ng-template>
 
@@ -100,6 +103,10 @@
 
         <span [class]="'status-' + users.status">{{users.status}}</span>
       </td>
+      <td>
+        <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button mr-2" (click)="editUser(user)"></button>
+        <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger"  (click)="deleteUser(user)"></button>
+    </td>
     </tr>
   </ng-template>
 </p-table>
