--- a/frontend-leis/src/app/protected/modules/equipment/pages/manage-users/manage-users.component.html
+++ b/frontend-leis/src/app/protected/modules/equipment/pages/manage-users/manage-users.component.html
@@ -1,5 +1,5 @@
-<div class="equipment__admin2" >
-  <mat-card style="border-radius: 1rem; width: 80%; margin-left: 150px; background-color: rgb(8, 22, 54); margin-top: 70px;">
+<div class="equipment__admin" >
+  <mat-card style="border-radius: 1rem; width: 80%; margin-left: 50px; background-color: rgb(8, 22, 54); margin-top: 50px;">
   <div class="equipment__header" >
     <div class="photo col-5">
       <img
@@ -30,12 +30,12 @@
     </div>
   </div>
 </mat-card>
-
-  <div class="section">
+<mat-card style="border-radius: 1rem; width: 50%; background-color: rgb(8, 22, 54); margin-top: 10px;">
+  <div class="section" style="margin-left: 70px; margin-bottom: 10px;">
     <p-fileUpload name="myfile[]" url="./upload.php" style="margin-left: 50px;"></p-fileUpload>
   </div>
+</mat-card>
   <div class="equipment__header">
-
   <div >
     <button pButton pRipple type="button" label="Success" class="p-button-success" style="width: 200px;"></button>
   </div>
