--- a/frontend-leis/src/app/protected/modules/statistics/general-equipment/general-equipment.component.html
+++ b/frontend-leis/src/app/protected/modules/statistics/general-equipment/general-equipment.component.html
@@ -2,20 +2,20 @@
 
   <div class="equipmentheader" style="width: 80%;">
     <div class="redcards">
-      <label type="text" class="form-control" placeholder="Nombre" style="border-radius: 15px; border: 0.6px solid black">Equpo prestamos</label>
+      <label type="text" style="border-radius: 15px; margin-top:5%;">Equpo prestamos</label>
       <h4 style="justify-content: center; margin-top: 30%;">XXXX</h4>
     </div>
     <div class="redcards">
-      <label type="text" class="form-control" placeholder="Nombre" style="border-radius: 15px; border: 0.5px solid black">Equipos bodega</label>
+    <label type="text" style="border-radius: 15px; margin-top:5%;">Equipos bodega</label>
       <h4 style="justify-content: center; margin-top: 30%;">XXXX</h4>
     </div>
     <div class="redcards">
-      <label type="text" class="form-control" placeholder="Nombre" style="border-radius: 15px; border: 0.5px solid black">Equipos en el
+      <label type="text" style="border-radius: 15px; margin-top:5%;">Equipos en el
         campus</label>
         <h4 style="justify-content: center; margin-top: 30%;">XXXX</h4>
     </div>
     <div class="redcards">
-      <label type="text" class="form-control" placeholder="Nombre" style="border-radius: 15px; border: 0.5px solid black">Equipos en
+      <label type="text" style="border-radius: 15px; margin-top:5%;">Equipos en
         Giordano</label>
         <h4 style="justify-content: center; margin-top: 30%;">XXXX</h4>
     </div>
