--- a/frontend-leis/src/app/protected/modules/statistics/components/mini-card-statistics/mini-card-statistics.component.html
+++ b/frontend-leis/src/app/protected/modules/statistics/components/mini-card-statistics/mini-card-statistics.component.html
@@ -1,4 +1,4 @@
 <div class="statistics__mini-card">
-    <label class="mini-card__value">Lorem ipsum dolor sit amet</label>
-    <label class="mini-card__label">Tipo de Equipo</label>
+    <label class="mini-card__value">xxxx</label>
+    <label class="mini-card__label">xxxxx</label>
 </div>
