--- a/frontend-leis/src/app/protected/modules/statistics/pages/individual-statistics/individual-statistics.component.css
+++ b/frontend-leis/src/app/protected/modules/statistics/pages/individual-statistics/individual-statistics.component.css
@@ -70,3 +70,94 @@
     height: 100%;
     margin-top: 25px;
 }
+
+.equipmentadmin {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100% auto;
+  width: 90%;
+  margin: 5rem;
+  align-items: center;
+  background: gray;
+  margin-top:100px;
+}
+.equipmentheader {
+  display: flex;
+  /* flex-flow: row wrap;  */
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.title {
+  width: 50%;
+  height: 40px;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: baseline;
+}
+
+.cod {
+  margin-right: 25px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  background: var(--primary);
+  color: white;
+  width: 27%;
+  height: 130%;
+  border-radius: 15px;
+}
+.cod2{
+  margin-top: 2px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border: 2px solid orange;
+  border-radius: 15px;
+  background-color: antiquewhite;
+
+}
+.redcards {
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+  background: white;
+  text-align: center;
+  border-radius: 15px;
+  border: 2px solid black;
+  color: black;
+}
+.equipmentpanel2 {
+  width: 340px;
+  height: 450px;
+  margin: 20px;
+  background: white;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  padding: 2rem;
+  overflow-y: auto;
+  border: 2px solid black;
+  border-radius: 1rem;
+  color: rgb(8, 22, 54);
+}
+.document,
+.actions {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin: 25px;
+}
+.equipmentadmint {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100% auto;
+  width: 90%;
+  margin: 5rem;
+  align-items: center;
+  background: rgb(209, 204, 204);
+  border-radius: 2rem;
+}
