--- a/frontend-leis/src/app/protected/modules/loan/pages/list-users/list-users.component.html
+++ b/frontend-leis/src/app/protected/modules/loan/pages/list-users/list-users.component.html
@@ -1,3 +1,4 @@
+<div class="list_user">
 <p-table #dt [value]="loans" dataKey="id" styleClass="p-datatable-customers" [rowHover]="true" [rows]="10"
   [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" responsiveLayout="scroll"
   [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0"
@@ -101,3 +102,4 @@
     </tr>
   </ng-template>
 </p-table>
+</div>
