--- a/frontend-leis/src/app/protected/modules/users/pages/assign-roles/assign-roles.component.html
+++ b/frontend-leis/src/app/protected/modules/users/pages/assign-roles/assign-roles.component.html
@@ -1,6 +1,4 @@
-<div class="assign_admin">
   <div class="assign_header">
-
     <div class="photo img">
       <h1 class="asig">Asignación de Rol</h1>
       <img src="/assets/rol.png" alt="">
@@ -34,7 +32,5 @@
         </div>
       </div>
     </div>
-    <p-button class= "boton" label="Guardar" icon="pi pi-check" iconPos="right"></p-button>
+    <button pButton pRipple type="button" label="Guardar" icon="pi pi-check" class="p-button-rounded p-button-secondary" ></button>
   </div>
-
-</div>
