--- a/frontend-leis/src/app/protected/modules/laboratory/pages/administrar/administrar.component.html
+++ b/frontend-leis/src/app/protected/modules/laboratory/pages/administrar/administrar.component.html
@@ -136,12 +136,9 @@
 
           <!--Guardar -->
 
-
-          <button type="submit" [disabled]="!AdministrarForm.valid" class="btn btn-primary btn-lg btn-block" >
-            Guardar
-          </button>
-
-
+          <div class="button">
+            <button pButton pRipple type="button" label="Guardar" icon="pi pi-check" class="p-button-rounded p-button-secondary" ></button>
+          </div>
 
         </form>
       </div>
