--- a/frontend-leis/src/app/protected/modules/users/pages/assign-roles/assign-roles.component.css
+++ b/frontend-leis/src/app/protected/modules/users/pages/assign-roles/assign-roles.component.css
@@ -89,9 +89,9 @@ background-color: #081636;
   align-items: center;
   display: flex;
   justify-content: center;
-  font-size: 19px;
-  background: var(--primary);
-  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  color: var(--primary);
   width: 22%;
   height: 100%;
   border-radius: 15px;
