--- a/frontend-leis/src/app/protected/modules/laboratory/pages/administrar/administrar.component.css
+++ b/frontend-leis/src/app/protected/modules/laboratory/pages/administrar/administrar.component.css
@@ -1,8 +1,10 @@
-.btn-primary,
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary:visited,
-.btn-primary:focus {
-    background-color: #011b47;
-    border-color: #011b47;
-}
+  .p-button{
+    align-items: center;
+    background-color: #081636;
+    border-bottom: #081636;
+  }
+  .button{
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  
