--- a/frontend-leis/src/app/protected/modules/loan/pages/create-loan/create-loan.component.css
+++ b/frontend-leis/src/app/protected/modules/loan/pages/create-loan/create-loan.component.css
@@ -19,3 +19,11 @@
     margin-left: 7px;
 }
 
+.p-button{
+    align-items: center;
+    background-color: #081636;
+    border-bottom: #081636;
+    margin-left: 20px;
+  }
+  
+
